chore: 실패한 리팩토링 복원 및 테스트 정상화
userId -> username 변경 및 리커트 척도 도입 시도 중 발생한 다수의 오류를 해결하기 위해, 관련 코드를 모두 "카카오 버튼 개선 완료" 시점으로 복원함.

수동 복원 과정에서 발생한 컴파일 오류 및 테스트 오류를 모두 수정.

UserRegisterRequest에 누락되었던 유효성 검사 어노테이션을 다시 추가.

SecurityConfig에 누락되었던 API 경로 접근 권한을 다시 추가.

모든 테스트(16개)가 통과하는 안정적인 상태로 복귀.